:lipstick: Added animated loaders

--- a/Store/ClientApp/app/components/home/home.component.html
+++ b/Store/ClientApp/app/components/home/home.component.html
@@ -1,2 +1,8 @@
 <!--Uses ngx-markdown module to dispaly the content-->
-<markdown [data]="content"></markdown>
+<div *ngIf="content else loading">
+    <markdown [data]="content"></markdown>
+</div>
+
+<ng-template #loading>
+    <loading></loading>
+</ng-template>
