--- a/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/ClientApp/app/components/user/user.component.html
@@ -1,28 +1,26 @@
-﻿<app-messages></app-messages>
-<div class="row">
-    <div class="col-md-12 text-left">
-        <h2>Our Users</h2>
-    </div>
-</div>
-
-
-
-
-<div class="row control-box">
-    <div class="col-md-4 col-sm-12 text-left">
-        <div class="navbar action-box">
-            <button type="button" class="btn btn-primary" (click)="addUserModal.show()">Add User</button>
+﻿
+<div *ngIf="users.length else loading">
+    <app-messages></app-messages>
+    <div class="row">
+        <div class="col-md-12 text-left">
+            <h2>Our Users</h2>
         </div>
     </div>
-</div>
-<div class="row control-box">
-    <div class="col-md-12 col-sm-12 text-right">
-        <div class="form-group search-box">
-            <input type="text" class="form-control" [(ngModel)]="searchText" name="searchText" placeholder="Search Users .." />
+    <div class="row control-box">
+        <div class="col-md-4 col-sm-12 text-left">
+            <div class="navbar action-box">
+                <button type="button" class="btn btn-primary" (click)="addUserModal.show()">Add User</button>
+            </div>
         </div>
     </div>
-</div>
-<div *ngIf="users.length">
+    <div class="row control-box">
+        <div class="col-md-12 col-sm-12 text-right">
+            <div class="form-group search-box">
+                <input type="text" class="form-control" [(ngModel)]="searchText" name="searchText" placeholder="Search Users .." />
+            </div>
+        </div>
+    </div>
+
     <table class="table table-striped table-bordered table-hover">
         <thead>
             <tr>
@@ -48,6 +46,12 @@
         <pagination-controls (pageChange)="page = $event"></pagination-controls>
     </table>
 </div>
+
+<ng-template #loading>
+    <loading></loading>
+</ng-template>
+    
+
 
 <!--Add User-->
 <div class="modal fade" bsModal #addUserModal="bs-modal" [config]="{backdrop: 'static'}"
