--- a/Store/ClientApp/app/components/order/order.component.html
+++ b/Store/ClientApp/app/components/order/order.component.html
@@ -10,7 +10,7 @@
     <div class="row control-box">
         <div class="col-md-2 col-sm-12 text-left">
             <div class="navbar action-box">
-                <button type="button" class="btn btn-primary" (click)="addOrderModal.show()">Add Order</button>
+                <button type="button" class="btn btn-primary" (click)=" getNewModel(); addOrderModal.show()">Add Order</button>
             </div>
         </div>
     </div>
@@ -27,42 +27,45 @@
             </div>
         </div>
     </div>
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>Tracking Id</th>
-                    <th>User ID</th>
-                    <th>Address Name</th>
-                    <th>Street Address</th>
-                    <th>City</th>
-                    <th>State</th>
-                    <th>Zip Code</th>
-                    <th>Operations</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let order of orders | filterOrderBasedOnUser : filterUserId  | filterOrder : searchText | paginate: { itemsPerPage: 5, currentPage: page };">
-                    <td> {{ order.trackingId}} </td>
-                    <td> {{ order.user.lastName }}, {{ order.user.firstName }} </td>
-                    <td> {{ order.addressName}} </td>
-                    <td> {{ order.streetAddress}} </td>
-                    <td> {{ order.city }} </td>
-                    <td> {{ order.state }} </td>
-                    <td> {{ order.zipCode}} </td>
-                    <td>
-                        <button class="btn btn-info" (click)="model=order; orderDetailModal.show()">Show</button>
-                        <button class="btn btn-success" (click)="model=order; updateOrderModal.show()">Change</button>
-                        <button class="btn btn-warning" (click)="model=order; deleteOrderModal.show()">Remove</button>
-                    </td>
-                </tr>
-            </tbody>
-            
-        </table>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Tracking Id</th>
+                <th>User ID</th>
+                <th>Address Name</th>
+                <th>Street Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>Zip Code</th>
+                <th>Operations</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let order of orders | filterOrderBasedOnUser : filterUserId  | filterOrder : searchText | paginate: { itemsPerPage: 5, currentPage: page };">
+                <td> {{ order.trackingId}} </td>
+                <td> {{ order.user.lastName }}, {{ order.user.firstName }} </td>
+                <td> {{ order.addressName}} </td>
+                <td> {{ order.streetAddress}} </td>
+                <td> {{ order.city }} </td>
+                <td> {{ order.state }} </td>
+                <td> {{ order.zipCode}} </td>
+                <td>
+                    <button class="btn btn-info" (click)="model=order; orderDetailModal.show()">Show</button>
+                    <button class="btn btn-success" (click)="model=order; updateOrderModal.show()">Change</button>
+                    <button class="btn btn-warning" (click)="model=order; deleteOrderModal.show()">Remove</button>
+                </td>
+            </tr>
+        </tbody>
+
+    </table>
     <pagination-controls (pageChange)="page = $event"></pagination-controls>
-    </div>
+</div>
+
+{{diagnostic}}
 <ng-template #loading>
     <loading></loading>
 </ng-template>
+
 <!--ADD NEW ORDER-->
 <div class="modal fade" bsModal #addOrderModal="bs-modal" [config]="{backdrop: 'static'}"
      tabindex="-1" role="dialog">
@@ -74,7 +77,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="well" (ngSubmit)=" addOrder(model); addOrderModal.hide();" #addOrderForm="ngForm">
+            <form class="well" (ngSubmit)=" addOrder(model); addOrderModal.hide()" #addOrderForm="ngForm">
                 <div class="form-group">
                     <label class="required" for="trackingId">Tracking Id</label>
                     <input type="text" class="form-control" id="trackingId" placeholder="123978"
@@ -175,6 +178,8 @@
     </div>
 </div>
 
+{{diagonostic}}
+
 <!--Show Detail of the current order-->
 <div class="modal fade" bsModal #orderDetailModal="bs-modal" [config]="{backdrop: 'static'}"
      tabindex="-1" role="dialog">
@@ -267,7 +272,7 @@
                 </button>
             </div>
 
-            <form class="well" (ngSubmit)="updateOrder(model); updateOrderModal.hide();" #updateOrderForm="ngForm">
+            <form class="well" (ngSubmit)="updateOrder(model); updateOrderModal.hide()" #updateOrderForm="ngForm">
                 <div class="form-group">
                     <label class="required" for="trackingId">Tracking Id</label>
                     <input type="text" class="form-control" id="trackingId" placeholder="123978"
