:tada: Ready to launch :rocket:

--- a/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/ClientApp/app/components/user/user.component.html
@@ -9,7 +9,7 @@
     <div class="row control-box">
         <div class="col-md-4 col-sm-12 text-left">
             <div class="navbar action-box">
-                <button type="button" class="btn btn-primary" (click)="model=getNewModel(); addUserModal.show()">Add User</button>
+                <button type="button" class="btn btn-primary" (click)="getNewModel(); addUserModal.show()">Add User</button>
             </div>
         </div>
     </div>
